<resources>
    <string name="app_name">Advising Network </string>
    <string name="advising_network">Advising Network</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="problem">Problem</string>
    <string name="back">Back?</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="time_line">Time Line</string>
    <string name="chat">Chat</string>
    <string name="meeting">Meeting</string>
    <string name="calculate_gpa"> GPA </string>
    <string name="aau">AAU</string>
    <string name="about_college">About College</string>
    <string name="settings">Settings</string>
    <string name="other_menu">Other Menu</string>
    <string name="logout">Log Out</string>
    <string name="username">UserName</string>
    <string name="courses">Courses</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="java">Java Developer</string>
    <string name="c">C++</string>
    <string name="python">Python</string>
    <string name="c_sharb">C#</string>
    <string name="c_">C</string>
    <string name="roudmap">RoudMap</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_androidknowledge_com">contact_androidknowledge_com</string>
    <string name="adel_nasim">- Adel Nasim</string>
    <string name="mohamed_el_desouki">- Mohamed El-Desouki</string>
    <string name="java1">Java</string>
    <string name="mission">Mission</string>
    <string name="approach">Approach</string>
    <string name="objectives">Objectives</string>
    <string name="college_vision">College Vision</string>
    <string name="college_strategy">College Strategy</string>
    <string name="departments">Departments</string>
    <string name="aboutcollege_depart">Department</string>


</resources>