<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".problem_Page"
    android:background="@color/caffe">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="129dp"
        android:src="@drawable/logo_2_1" />

    <ImageView
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-10dp"
        android:src="@drawable/shape1" />

    <ImageView
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="-7dp"
        android:src="@drawable/shape2" />


    <ImageView
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="-60dp"
        android:src="@drawable/shape3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp"
            android:background="@color/caffe">

            <TextView
                android:id="@+id/advising_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sansita_swashed_medium"
                android:text="@string/advising_network"
                android:textColor="#006D68"
                android:textSize="28dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/email_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/green"
                android:textSize="20dp"
                android:textStyle="bold">

            </EditText>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:hint="@string/name"
                android:textColorHint="@color/green"
                android:inputType="text"
                >
            </EditText>

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:hint="@string/id"
                android:textColorHint="@color/green"
                android:inputType="number">
            </EditText>

            <EditText
                android:id="@+id/problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:hint="@string/problem"
                android:textColorHint="@color/green"
                android:inputType="text">
            </EditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:textColor="@color/caffe"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/send"
                android:background="@drawable/round_btn">
            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/back"
                android:textSize="20dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                >

            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>